<resources>
    <string name="app_name">Flowchart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">log out</string>
    <string name="edit_profile">edit</string>
    <string name="error">error</string>
    <string name="deleting_a_project">deleting a project</string>
    <string name="upload_to_cloud">upload to cloud</string>
</resources>